--- a/css-structure/css-responsive_playground/index.html
+++ b/css-structure/css-responsive_playground/index.html
@@ -55,8 +55,17 @@
             folder for options to use.
           </p>
           <div class="box box--five">
-            <!-- You might want to use the <picture> element here. -->
-            <img src="./img/cat_small.jpg" alt="A cat" />
+            <picture>
+              <source
+                media="(min-width: 1200px)"
+                srcset="../img/cat_large.jpg"
+              />
+              <source
+                media="(min-width: 900px)"
+                srcset="../img/cat_medium.jpg"
+              />
+              <img src="./img/cat_small.jpg" alt="A cat" />
+            </picture>
           </div>
         </section>
       </section>
