--- a/hmtl-forms/html-forms_form-validation/index.html
+++ b/hmtl-forms/html-forms_form-validation/index.html
@@ -31,7 +31,10 @@
             type="text"
             name="firstName"
             id="first-name"
+            minlength="4"
+            maxlength="30"
             placeholder="Your first name"
+            required
           />
 
           <label for="last-name">Last Name</label>
@@ -39,14 +42,17 @@
             type="text"
             name="lastName"
             id="last-name"
+            minlength="4"
+            maxlength="30"
             placeholder="Your last name"
+            required
           />
 
           <label for="age">Age</label>
-          <input type="number" name="age" id="age" />
+          <input type="number" name="age" id="age" min="14" required />
 
           <label for="email">Email</label>
-          <input type="text" name="email" id="email" />
+          <input type="email" name="email" id="email" required />
         </fieldset>
 
         <fieldset>
@@ -90,6 +96,7 @@
               type="checkbox"
               name="terms-of-service"
               id="terms-of-service"
+              required
             />
             I have read the terms of service and agree to sell my soul
             <a
