--- a/hmtl-forms/html-forms_finding-a11y-errors/index.html
+++ b/hmtl-forms/html-forms_finding-a11y-errors/index.html
@@ -15,8 +15,8 @@
       Please let us know how we can support you with a11y issues.
     </p>
 
-    <form aria-labelledby="title" aria-describedby="description">
-      <fieldset>
+    <form aria-labelledby="title">
+      <fieldset aria-describedby="description">
         <legend>Enter your information</legend>
         <label for="name-Input">Name:</label>
         <input id="name-Input" type="text" />
